[project]
name = "poetry-source-env"
version = "2.1.0"
description = "Load Poetry package sources from environment variables"
readme = "README.md"
requires-python = ">=3.8,<4.0"
license = "MIT"
authors = [{ name = "Justin Becker", email = "justin.becker@viento-msa.com" }]
dependencies = [
    "dict-deep>=4.1.2,<5.0.0",
    "poetry>=1.5.0,<2.0.0; python_version < '3.9'",
    "poetry>=1.5.0,<2.4.0; python_version >= '3.9'",
    "pydantic>=1.10.7,<2.0.0",
    "typing-extensions>=4.4.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jbeckerviento/poetry-source-env"
Repository = "https://github.com/jbeckerviento/poetry-source-env"
Source = "https://github.com/celsiusnarhwal/poetry-source-env"

[project.entry-points."poetry.plugin"]
poetry-source-env = "poetry_source_env.plugin:PoetrySourcePlugin"

[project.entry-points."poetry.application.plugin"]
poetry-source-env = "poetry_source_env.application_plugin:PoetrySourceApplicationPlugin"

[tool.black]
target-version = ["py38"]
line-length = 88

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
